# mysql_samples

./: CMakeLists.txt  README.md
modules/mysql_test/: CMakeLists.txt
modules/mysql_test/src/: main.cpp  pch.h
script/: cmakegen-vc12-x64-debug.cmd  cmakegen-vc12-x64-release.cmd  cmakegen-vc12-x86-debug.cmd  cmakegen-vc12-x86-release.cmd
trps_master/: olehk13_1.sql  olehk13_2.sql  trps_master_data.sql  trps_master_no_data.sql
